name:                stdout-progress
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/stdout-progress#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Xu
maintainer:          michaeljxu11@gmail.com
copyright:           2017 Michael Xu
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable stdout-progress
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5, async, conduit-combinators, conduit-extra, conduit, bytestring
  other-extensions:          OverloadedStrings
